--- a/_posts/2015-07-02-News.md
+++ b/_posts/2015-07-02-News.md
@@ -3,6 +3,14 @@ layout: post
 title: "News"
 date: 2015-07-02 09:00:00
 catagories: general important
+permalink: "Jeykll"
 ---
 
-Content
+I decided to go with <a href="google.com">Test</a>Jeykll and Github Pages because of their limitless capabilities and cost.[1][2]
+
+Currently the average price for a domain is between $8-10 per year. Hosting a website with a domain you would need eight usd. As for the hosts, many providers out there offer free host services.[3][4]
+
+1.http://jekyllrb.com/
+2.https://pages.github.com/
+3.https://www.google.com/search?q=average+price+for+a+domain&ie=utf-8&oe=utf-8
+4.https://en.wikipedia.org/wiki/Comparison_of_free_web_hosting_services
